Added KNN Claasifier

--- a/latex/annotated.tex
+++ b/latex/annotated.tex
@@ -1,8 +1,10 @@
 \section{Class List}
 Here are the classes, structs, unions and interfaces with brief descriptions\+:\begin{DoxyCompactList}
 \item\contentsline{section}{\hyperlink{classKMClassifier}{K\+M\+Classifier} \\*A class for K-\/\+Means Classifier We begin by choosing random class centroids in the dataset }{\pageref{classKMClassifier}}{}
+\item\contentsline{section}{\hyperlink{classKNNClassifier}{K\+N\+N\+Classifier} \\*A class for K-\/\+Nearest-\/\+Neighbour Classifier }{\pageref{classKNNClassifier}}{}
 \item\contentsline{section}{\hyperlink{classLayer}{Layer} \\*A Class for layers of the \hyperlink{classNeuralNetwork}{Neural\+Network} }{\pageref{classLayer}}{}
 \item\contentsline{section}{\hyperlink{classLinearClassifier}{Linear\+Classifier} \\*A Class for Linear Regression }{\pageref{classLinearClassifier}}{}
 \item\contentsline{section}{\hyperlink{classLogisticClassifier}{Logistic\+Classifier} \\*A Class for Logistic Regression }{\pageref{classLogisticClassifier}}{}
 \item\contentsline{section}{\hyperlink{classNeuralNetwork}{Neural\+Network} \\*A class for the Neural Network }{\pageref{classNeuralNetwork}}{}
+\item\contentsline{section}{\hyperlink{classPointDistance}{Point\+Distance} \\*A class to keep track of distance of all points of dataset from another point in \hyperlink{classKNNClassifier}{K\+N\+N\+Classifier} }{\pageref{classPointDistance}}{}
 \end{DoxyCompactList}
