--- a/latex/refman.tex
+++ b/latex/refman.tex
@@ -138,14 +138,20 @@
 \hypersetup{pageanchor=true}
 
 %--- Begin generated contents ---
+\chapter{Stupid-\/\+Learn}
+\label{md_README}
+\Hypertarget{md_README}
+\input{md_README}
 \chapter{Class Index}
 \input{annotated}
 \chapter{Class Documentation}
 \input{classKMClassifier}
+\input{classKNNClassifier}
 \input{classLayer}
 \input{classLinearClassifier}
 \input{classLogisticClassifier}
 \input{classNeuralNetwork}
+\input{classPointDistance}
 %--- End generated contents ---
 
 % Index
